--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "moni_digital_wallet",
   "version": "1.0.0",
   "description": "A backend api for moni digital wallet",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,10 +12,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "uuid": "^8.3.2"
   }
 }
