--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db_migration": "npx sequelize-cli db:migrate"
+    "db_migration": "npx sequelize-cli db:migrate --env production"
 
   },
   "author": "Emmanuel Oteng Wilson",
