--- a/config/config.json
+++ b/config/config.json
@@ -20,7 +20,10 @@
     "host": "ec2-44-196-170-156.compute-1.amazonaws.com",
     "dialect": "postgres",
     "dialectOptions": {
-      "ssl": true
+      "ssl": {
+        "require": true, 
+        "rejectUnauthorized" : false 
+      }
     },
     "port": 5432
   }
