--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db_migration": "npx sequelize-cli db:migrate --env production",
-    "db_seed": "npx sequelize-cli db:seed:all --env"
+    "db_seed": "npx sequelize-cli db:seed:all --env production"
 
   },
   "author": "Emmanuel Oteng Wilson",
